--- a/style.css
+++ b/style.css
@@ -45,10 +45,16 @@ body{
 .left-arrow-btn{
 
     padding: 6px;
+    border-radius: 6px;
+    width: 32px;
+  
 }
-.right-arrouw-btn{
+.right-arrow-btn{
 
     padding: 6px;
+    border-radius: 6px;
+    width: 32px;
+    
 }
 
 /* MIDDLE ELEMENTS */
@@ -56,7 +62,7 @@ body{
 .screen-container{
 
     display: flex;
-    background-color: aliceblue;
+    background-color: gray;
 
     margin: 24px;
     
@@ -70,22 +76,22 @@ body{
     flex-wrap: wrap;
 
     width: 400px;
-    height: 448px;
+    height: 400px;
 }
 
 .div-pixel-white{
 
-    background-color: black;
+    background-color: wheat;
     width: 25px;
-    height: 28px;
+    height: 25px;
     flex: 1 1 auto;
 }
 
 .div-pixel-black{
 
-    background-color: aliceblue;
+    background-color: black;
     width: 25px;
-    height: 28px;
+    height: 25px;
     flex: 1 1 auto;
 
 }
@@ -95,14 +101,33 @@ body{
 .bottom-btn-container{
 
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 
     height: 65px;
+    width: 100%;
 
 }
 
 .reset-btn{
+
+    padding: 8px;
+    background-color: aliceblue;
+    
+    font-weight: bold;
+    border-radius: 6px;
+}
+
+.start-btn{
+
+    padding: 8px;
+    background-color: aliceblue;
+    
+    font-weight: bold;
+    border-radius: 6px;
+}
+
+.power-btn{
 
     padding: 8px;
     background-color: aliceblue;
