--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow:10px 10px 10px #3E6680;
 
-    background-color: brown;
+    background-color: #00487C;
     border-radius: 12px;
     padding: 12px;
 
@@ -33,9 +34,14 @@ body{
 
 .pixel-display{
 
-    background-color: darkred;
-    color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    color: greenyellow;
+    box-shadow: inset 2px 3px 10px grey;
     border-radius: 6px;
+    width: 32px;
 
     margin: 12px;
     padding: 6px;
@@ -47,6 +53,8 @@ body{
     padding: 6px;
     border-radius: 6px;
     width: 32px;
+    box-shadow:3px 4px 6px black;
+    box-shadow:inset -2px -3px 11px black;
   
 }
 .right-arrow-btn{
@@ -54,6 +62,8 @@ body{
     padding: 6px;
     border-radius: 6px;
     width: 32px;
+    box-shadow:3px 4px 6px black;
+    box-shadow:inset -2px -3px 11px black;
     
 }
 
@@ -62,8 +72,8 @@ body{
 .screen-container{
 
     display: flex;
-    background-color: gray;
-
+    background-color: #3E6680;
+    
     margin: 24px;
     
 }
@@ -81,7 +91,7 @@ body{
 
 .div-pixel-white{
 
-    background-color: wheat;
+    background-color: #CAE5FF;
     
     flex: 1 1 auto;
 }
@@ -110,27 +120,34 @@ body{
 .reset-btn{
 
     padding: 8px;
-    background-color: aliceblue;
+    background-color:#027BCE ;
     
     font-weight: bold;
-    border-radius: 6px;
+    color: azure;
+    border-radius: 12px;
+    box-shadow:3px 4px 6px black;
+    box-shadow:inset -2px -3px 11px black;
 }
 
 .start-btn{
 
     padding: 8px;
-    background-color: aliceblue;
-    
+    background-color: #027BCE;
+    color: azure;
     font-weight: bold;
-    border-radius: 6px;
+    border-radius: 12px;
+    box-shadow:3px 4px 6px black;
+    box-shadow:inset -2px -3px 11px black;
 }
 
 .power-btn{
 
     padding: 8px;
-    background-color: aliceblue;
-    
+    background-color:#027BCE;
+    color: azure;
     font-weight: bold;
-    border-radius: 6px;
+    border-radius: 12px;
+    box-shadow:3px 4px 6px black;
+    box-shadow:inset -2px -3px 11px black;
 }
 
